# web3-rush.py

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  docker-compose.yml  pyproject.toml  web3_rush.pyi
.github/workflows/: CI.yml  benchmark.yml  test.yml
dev/bench/: data.js  index.html
macros/: Cargo.toml  README.md
macros/src/: lib.rs
macros/tests/: convert.rs
src/: account.rs  exceptions.rs  lib.rs  types.rs
src/types/: address.rs  bigint.rs  block.rs  fee.rs  log.rs  mod.rs  node.rs  primitives.rs  str.rs  syncing.rs  transaction.rs  txpool.rs
src/utils/: convert.rs  mod.rs
tests/: conftest.py  test_eth.py  test_web3_root.py
tests/benchmark/: test_bench_eth.py  test_bench_net.py  test_bench_web3_root.py
web3_rush/: __init__.py  web3_rush.pyi
