[package]
name = "web3-rush-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "web3_rush"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module", "num-bigint"] }
pyo3-asyncio = { version = "0.17.0", features = ["attributes", "async-std-runtime"] }
web3 = "0.18.0"
serde = "^1.0.153"
serde_json = "^1.0.94"
derive_more = "0.99.17"
hex-literal = "0.3.4"
hex = "0.4.3"
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = "1.26.0"
byteorder = "1.4.3"
accessors = "0.0.3"
num-bigint = "0.4.3"
solders-macros = "0.14.4"
ruint = { version = "1.7.0", features = ["primitive-types", "pyo3"] }
