[package]
name = "web3-rush-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "web3_rush"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.1", features = ["macros", "extension-module", "num-bigint", "serde"] }
pyo3-asyncio = { version = "0.18.0", features = ["attributes", "async-std-runtime"] }
pythonize = "0.18.0"
ethers = "2.0.0"
serde = "^1.0.153"
serde_json = "^1.0.94"
derive_more = "0.99.17"
once_cell = "1.17.1"
bigdecimal = "0.3.0"
hex-string = "0.1.0"
hex = "0.4.3"
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = "1.26.0"
byteorder = "1.4.3"
accessors = "0.0.3"
num-bigint = { version="0.4.3", features = ["serde"]}
num-bigfloat = { version = "1.6.2", features = ["serde"]}
solders-macros = "0.14.4"
ruint = { version = "1.7.0", features = ["primitive-types", "pyo3", "serde"], git= "https://github.com/purplesmoke05/uint"}
dict_derive = "0.4.0"
struct-convert = "1.2.7"
derivative = "2.2.0"
derive-from-ext = "0.2.0"
web3-rush-macros = { workspace = true }
inter-struct = "0.2.0"
thinwrap = "1.0.0"
pyo3-built = "0.4"
url = "2.3.1"
rustc-hex = "2.1.0"

[build-dependencies]
built = { version = "0.6", features = ["chrono"] }

[workspace]
members = [".", "macros"]

[workspace.dependencies]
web3-rush-macros = { path = "./macros", version = "0.1.0" }
