[tool.poetry]
name = "web3-rush.py"
version = "0.1.0"
description = "Web3 Client for Python which enforced by rust."
authors = ["Yosuke Otosu <yosuke.otosu@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/gabriel-milan/pyo3-project-template"
repository = "https://github.com/gabriel-milan/pyo3-project-template"
keywords = ["python", "template", "pyo3", "rust"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
pre-commit = "^2.18.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pdoc3 = "^0.10.0"
maturin = ">=0.13,<0.14"
web3 = "^5.31.3"
pytest-benchmark = "^4.0.0"
setuptools = "^67.6.0"

[tool.black]
line-length = 100
target-version = ["py310"]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"
