[package]
name = "web3-rush-macros"
version = "0.1.0"
edition = "2021"
include = ["src/*.rs", "/LICENSE"]
license = "MIT"
description = "A collection of attribute macros to reduce boilerplate in the [web3-rush.py](https://github.com/purplesmoke05/web3-rush.py) project."
repository = "https://github.com/purplesmoke05/web3-rush.py"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.24"
syn = {version="1.0.96", features = ["full"]}
proc-macro2 = "1.0.52"
